--- a/semantic/semantic.css
+++ b/semantic/semantic.css
@@ -25026,7 +25026,8 @@ Floated Menu / Item
   background: #FFFFFF;
   padding: 0em;
   border: none;
-  border-radius: 0.28571429rem;
+  /*border-radius: 0.28571429rem;*/
+  border-radius: 0px;
   box-shadow: 0px 1px 3px 0px #D4D4D5, 0px 0px 0px 1px #D4D4D5;
   -webkit-transition: box-shadow 0.1s ease, -webkit-transform 0.1s ease;
   transition: box-shadow 0.1s ease, -webkit-transform 0.1s ease;
@@ -25100,7 +25101,7 @@ Floated Menu / Item
 
 .ui.cards > .card > :first-child,
 .ui.card > :first-child {
-  border-radius: 0.28571429rem 0.28571429rem 0em 0em !important;
+  /*border-radius: 0.28571429rem 0.28571429rem 0em 0em !important;*/
   border-top: none !important;
 }
 
@@ -25111,7 +25112,7 @@ Floated Menu / Item
 
 .ui.cards > .card > :only-child,
 .ui.card > :only-child {
-  border-radius: 0.28571429rem !important;
+  /*border-radius: 0.28571429rem !important;*/
 }
 
 /*--------------
@@ -25248,7 +25249,7 @@ Floated Menu / Item
 .ui.card .avatar img {
   width: 2em;
   height: 2em;
-  border-radius: 500rem;
+  /*border-radius: 500rem;*/
 }
 
 /*--------------
