--- a/e/estilos.css
+++ b/e/estilos.css
@@ -1,8 +1,8 @@
 .ui.grid {
-    margin-top: 1px;
+    margin-top: 20px;
 }
 .borde {
-    border-style: 1px solid red;
+    border: 1px solid red;
 }
 .a {
     color: #F5A214 !important;
@@ -40,11 +40,3 @@
 #menu:hover {
 	background: rgba(255, 255, 255, 0.1);
 }
-.ui.grid + .grid {
-    margin-top: 0px;
-}
-.ui.container {
-    margin-left: 0px !important;
-    margin-right: 0px !important;
-}
-
