--- a/a/css/panel.css
+++ b/a/css/panel.css
@@ -2,7 +2,7 @@
 
 .cbarra {
     
-    background-color: #262626;
+    background-color: red;
     height: 40px;
     border-bottom: 10px solid #F5A214;
     -webkit-box-sizing: border-box;
