--- a/a/css/panel.css
+++ b/a/css/panel.css
@@ -12,7 +12,7 @@
 .c {
     color: #4183C4 !important;
 }
-
+/* STICKY BAR */
 #bar {
     background: #262626;
     width: 100%;
@@ -28,7 +28,7 @@
     border-bottom: 5px solid #F5A214;
 	font-size: 22px;
 }
-
+/* LINK MENU */
 #bar > a {
     float: left;
     background: #F5A214;
@@ -38,6 +38,12 @@
 }
 #bar > a:hover {
     background: rgba(255, 255, 255, 0.1);
+}
+#bar > a > i {
+    margin-top: 13px;
+}
+#bar > p {
+    margin-top: 10px;
 }
 #wrapper {
     margin-top: 50px;
