--- a/a/css/panel.css
+++ b/a/css/panel.css
@@ -27,12 +27,14 @@
     text-align: center;
     border-bottom: 5px solid #F5A214;
 	font-size: 22px;
+    z-index: 1000;
+    box-shadow: 0px 3px 3px rgba(0,0,0,0.5);
 }
 /* LINK MENU */
 #bar > a {
     float: left;
     background: #F5A214;
-    height: 45px;
+    height: 46px;
     width: 50px;
     color: white;
 }
