--- a/a/css/panel.css
+++ b/a/css/panel.css
@@ -28,7 +28,7 @@
     border-bottom: 5px solid #F5A214;
 	font-size: 22px;
     z-index: 1000;
-    box-shadow: 0px 3px 3px rgba(0,0,0,0.5);
+    /*box-shadow: 0px 3px 3px rgba(0,0,0,0.5);*/
 }
 /* LINK MENU */
 #bar > a {
@@ -46,10 +46,123 @@
 }
 #bar > p {
     margin-top: 10px;
+    font-size: 25px;
 }
 #wrapper {
     margin-top: 50px;
-    text-align: justify;
-    font-size: 10px;
 }
+/* NAVIGATION BAR */
+nav {
+    background-color: #262626;
+    width: 250px;
+    height: 100%;
+    margin: 0;
+    position: fixed;
+    font-family: 'Lato';
+}
+nav ul {
+    overflow: hidden;
+    list-style: none;
+    padding: 0 !important;
+    margin: 0 !important;
+}
+nav ul li {
+    display: block;
+}
+#profile {
+    color: white;
+    text-align: center;
+    background: #F5A214;
+    font-size: 20px;
+    padding: 20px;
+    -webkit-box-sizing: border-box !important;
+    -moz-box-sizing: border-box !important;
+    box-sizing: border-box !important;
+}
+#iconProfile {
+    margin: 0 auto;
+    color: #262626;
+}
+#titleProfile {
+    color: #262626;
+}
+#nameProfile {
+    font-size: 15px;
+    color:#262626;
+}
+nav ul li .icons {
+    float: left;
+}
+nav  ul  li a {
+    color: white;
+    display: block;
+    padding: 10px;
+    font-family: 'Lato';
+    text-align: center;
+    text-decoration: none;
+}
+nav  ul  li a:hover {
+    background: rgba(255, 255, 255, 0.1);
+    color: white;
+    text-decoration: none;
+    
+}
+nav  ul  li a:hover .icons {
+    color: #F5A214;    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
