--- a/a/css/panel.css
+++ b/a/css/panel.css
@@ -26,9 +26,8 @@
     color: white;
     text-align: center;
     border-bottom: 5px solid #F5A214;
-	font-size: 22px;
     z-index: 1000;
-    /*box-shadow: 0px 3px 3px rgba(0,0,0,0.5);*/
+    box-shadow: 0px 3px 3px rgba(0,0,0,0.5);
 }
 /* LINK MENU */
 #bar > a {
@@ -42,7 +41,7 @@
     background: rgba(255, 255, 255, 0.1);
 }
 #bar > a > i {
-    margin-top: 13px;
+    margin-top: 10px;
 }
 #bar > p {
     margin-top: 10px;
@@ -73,11 +72,7 @@ nav ul li {
     color: white;
     text-align: center;
     background: #F5A214;
-    font-size: 20px;
-    padding: 20px;
-    -webkit-box-sizing: border-box !important;
-    -moz-box-sizing: border-box !important;
-    box-sizing: border-box !important;
+    padding: 50px 0px 50px 0px;
 }
 #iconProfile {
     margin: 0 auto;
@@ -85,6 +80,7 @@ nav ul li {
 }
 #titleProfile {
     color: #262626;
+    font-weight: 800
 }
 #nameProfile {
     font-size: 15px;
