--- a/a/css/panel.css
+++ b/a/css/panel.css
@@ -27,7 +27,7 @@
     text-align: center;
     border-bottom: 5px solid #F5A214;
     z-index: 1000;
-    box-shadow: 0px 3px 3px rgba(0,0,0,0.5);
+    /*box-shadow: 0px 3px 3px rgba(0,0,0,0.5);*/
 }
 /* LINK MENU */
 #bar > a {
@@ -41,7 +41,8 @@
     background: rgba(255, 255, 255, 0.1);
 }
 #bar > a > i {
-    margin-top: 10px;
+    margin-top: 12px;
+    font-size: 20px;
 }
 #bar > p {
     margin-top: 10px;
@@ -58,6 +59,7 @@ nav {
     margin: 0;
     position: fixed;
     font-family: 'Lato';
+    overflow-y: auto;
 }
 nav ul {
     overflow: hidden;
