--- a/a/css/empresas.css
+++ b/a/css/empresas.css
@@ -26,6 +26,7 @@
 }
 .titleIndustry .divHover {
     padding: 0px 3px 0px 20px;
+    border-radius: 3px 3px 3px 3px;
 }
 .titleIndustry a i {
     opacity: 0.45 !important;
