--- a/a/css/panel.css
+++ b/a/css/panel.css
@@ -168,8 +168,8 @@ nav  ul  li a:hover .icons {
     top: 0;
     left: 0;
     z-index: 2;
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.7); /* Black w/ opacity */
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.7);
 }
 /* BORDER CARD */
 .shadow {
