--- a/a/css/empresas.css
+++ b/a/css/empresas.css
@@ -57,19 +57,15 @@
 .modal-header {
     position: relative;
     padding: 10px 25px 5px 25px;
-    background: #262626;
-    border-bottom: 5px solid #f5a214;
 }
 .modal-header > i {
-    color: white;
     float: right;
 }
-.modal-header > h3 {
-    color: white;
-    font-family: 'Roboto';
+.modal-header {
     display: block;
     margin: 0px;
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: bold;
 }
 .modal-body {
     font-family: 'Lato';
