--- a/a/css/empresas.css
+++ b/a/css/empresas.css
@@ -83,7 +83,7 @@
     border-top: 1px solid #D4D4D5;
     border-left: 1px solid #D4D4D5;
     border-right: 1px solid #D4D4D5;
-    border-radius: 10px 10px 0px 0px;
+    /*border-radius: 10px 10px 0px 0px;*/
 }
 .card {
     padding: 5px;
@@ -94,8 +94,8 @@
     width: 100%;
     display: inline-block;
     text-align: center;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
+    /*border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;*/
     padding: 10px;
     text-decoration: none;
     font-family: 'Lato';
