--- a/a/css/empresas.css
+++ b/a/css/empresas.css
@@ -22,11 +22,15 @@
     padding-right: 0px;
     padding-bottom: 10px;
 }
-.titleIndustry span {
+.titleIndustry p {
     color: #262626;
     font-size: 15px;
-    margin-left: 30px;
+    margin-left: 10px;
+    display: inline;
     font-family: 'Montserrat';
+    margin-bottom: 0px;
+    position: absolute;
+    padding-top: 10px;
 }
 .titleIndustry .btn {
     padding: 0px 3px 0px 20px;
@@ -83,6 +87,7 @@
     border-top: 1px solid #D4D4D5;
     border-left: 1px solid #D4D4D5;
     border-right: 1px solid #D4D4D5;
+    background-color: #FFFFFF
     /*border-radius: 10px 10px 0px 0px;*/
 }
 .card {
