--- a/a/css/panel.css
+++ b/a/css/panel.css
@@ -27,7 +27,9 @@
 .cB {
     color: #FFF;
 }
-
+body {
+    background-color: #F6F3F0 !important;
+}
 .borde {
     border: 1px solid red;
 }
@@ -144,7 +146,6 @@ nav  ul  li a:hover .icons {
     position: absolute;
     top: 45px;
     overflow-y: auto;
-    display: none;
 }
 .leftContent {
     left: 250px;
