--- a/a/css/zonas.css
+++ b/a/css/zonas.css
@@ -1,14 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Roboto');
-.titleZone {
+.card {
+    padding: 5px;
+}
+
+
+.borde {
+    border: 1px solid red;
+}
+.titleCard {
     border-bottom: 1px solid #D4D4D5;
-    padding-top: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-bottom: 10px;
+    padding: 10px 10px 0px 10px;
     
 }
-.titleZone p {
+.titleCard p {
     color: #262626;
     font-size: 15px;
     margin-left: 10px;
