--- a/a/css/base.css
+++ b/a/css/base.css
@@ -274,6 +274,28 @@ nav  ul  li a:hover .icons {
     background: #262626;
     cursor: pointer;
 }
+.stickyButtonOne {
+    position: fixed;
+    bottom: 50px;
+    right: 10px;
+    padding: 10px 15px 10px 15px;
+    background: #F5A214;
+    z-index: 0;
+    color: white;
+    border-radius: 5px;
+    display: none;
+}
+.stickyButtonTwo {
+    position: fixed;
+    bottom: 90px;
+    right: 10px;
+    padding: 10px 15px 10px 15px;
+    background: #F5A214;
+    z-index: 0;
+    color: white;
+    border-radius: 5px;
+    display: none;
+}
 /* BACKGROUND OPACITY MENU*/
 .shadowDisplay {
     position: fixed;
