--- a/a/css/zonas.css
+++ b/a/css/zonas.css
@@ -1,15 +1,14 @@
 
-table {
-    width: 100%;
-}
-
 table th {
 	background: rgba(0, 0, 0, 0.1);
+    padding: 5px;
+}
+table td {
+    padding: 5px;
+    font-family: 'Montserrat';
 }
 
-.tSticky {
+.firstColumn {
 	background: rgba(0, 0, 0, 0.1);
 	font-weight: bold;
 }
-
-
