--- a/a/recursos/responsiveTables/responsiveTables.css
+++ b/a/recursos/responsiveTables/responsiveTables.css
@@ -1,53 +1,49 @@
 table td, table th { 
-	padding: 9px 10px; text-align: left; 
+    text-align: center; 
+}
+.table-responsive {
+    margin-bottom: 0;
 }
 
-@media only screen and (max-width: 767px) {
+/* Mobile */
+@media only screen and (max-width: 1170px) {
 	
-	table.responsiva { 
-		margin-bottom: 0; 
-	}
+	table.responsive { margin-bottom: 0; }
 	
 	.pinned { 
-		position: absolute; 
-		left: 0; top: 0; 
-		background: #fff; 
-		width: 20%; 
-		overflow: hidden; 
-		overflow-x: scroll;
-	}
-	.pinned table {  
-		width: 100%; 
-	}
+        position: absolute; 
+        left: 0; 
+        top: 0;  
+        width: 100px; 
+        overflow: hidden; 
+        overflow-x: scroll; 
+    }
+	.pinned table { 
+        width: 100%; 
+    }
 	.pinned table th, .pinned table td { 
-		white-space: nowrap; 
-	}
+        white-space: nowrap; 
+    }
 	.pinned td:last-child { 
-		border-bottom: 0; 
-	}
-	
+        border-bottom: 0; 
+    }
 	div.table-wrapper { 
-		position: relative; 
-		overflow: hidden;
-	}
-	div.table-wrapper div.scrollable table { 
-		margin-left: 20%; 
-	}
+        position: relative; 
+        overflow: hidden; 
+    }
 	div.table-wrapper div.scrollable { 
-		overflow: scroll; 
-		overflow-y: hidden; 
-	}	
-	
-	table.responsiva td, table.responsiva th { 
-		position: relative; 
-		white-space: nowrap; 
-		overflow: hidden; 
-	}
-	table.responsiva th:first-child, table.responsiva td:first-child, table.responsiva td:first-child, table.responsiva.pinned td { 
-		display: none; 
-	}
-	
+        margin-left: 100px; 
+    }
+	div.table-wrapper div.scrollable { 
+        overflow: scroll; 
+        overflow-y: hidden; 
+    }	
+	table.responsive td, table.responsive th { 
+        position: relative; 
+        white-space: nowrap; 
+        overflow: hidden; 
+    }
+	table.responsive th:first-child, table.responsive td:first-child, table.responsive td:first-child, table.responsive.pinned td { 
+        display: none; 
+    }
 }
-
-
-
