--- a/a/recursos/simulador/css/datepicker.css
+++ b/a/recursos/simulador/css/datepicker.css
@@ -2,7 +2,7 @@
     width: 100%;
 }
 .picker__box {
-    background: green !important;
+    background: transparent !important;
 }
 .picker--opened .picker__holder {
     -webkit-transform: translateY(0);
@@ -11,6 +11,6 @@
     background: transparent;
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#1E000000,endColorstr=#1E000000)";
     zoom: 1;
-    background: red !important;
+    background: rgba(0, 0, 0, 0.32);
     transition: background 0.15s ease-out;
 }
