--- a/a/recursos/simulador/css/style.css
+++ b/a/recursos/simulador/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 @import url('https://fonts.googleapis.com/css?family=Baloo+Bhaina|Comfortaa|Raleway|Roboto|Source+Sans+Pro');
 * {
     padding: 0;
@@ -5,7 +6,8 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    font-family: 'Roboto';
+    font-family: 'Montserrat';
+    font-size: 35px;
 }
 section {
     overflow: hidden;
