--- a/a/recursos/simulador/css/style.css
+++ b/a/recursos/simulador/css/style.css
@@ -6,7 +6,7 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    font-family: 'Montserrat';
+    font-family: 'Raleway';
 }
 section {
     overflow: hidden;
