--- a/a/recursos/simulador/css/style.css
+++ b/a/recursos/simulador/css/style.css
@@ -28,70 +28,61 @@ label {
     float: left;
     width: 100%;
 }
-input {
+section input {
     width: 50%;
     float: left;
     padding: 10px;
 }
-input[type=text] {
+section input[type=text] {
     border-top: none;
     border-bottom: none;
     border-right: none;
     border-left: 5px solid #F5A214;
     background: rgba(0,0,0,0.1);
 }
-input:focus {
+section input:focus {
     outline: 0px;
 }
-.sButton {
+
+footer {
+    width: 100%;
     position: fixed;
-    width: 35px;
-    height: 35px;
-    color: white;
-    background: #F5A214;
-    z-index: 1000;
+    z-index: 1;
+    bottom: 0;
+    left: 0;
+    padding: 10px;
+    overflow: hidden;
+}
+.select {
+    width: 80%;
+    float: left;
+}
+.button {
+    width: 20%;
+    float: left;
+    padding-left: 5px;
+}
+.button > a {
+    width: 100%;
+    height: 34px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    box-shadow: 1px 2px 2px #666;
+    background: #F5A214;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #fff;
 }
-.sButton i {
-    font-size: 20px;
-}
-.sButton:hover {
-    cursor: pointer;
+.button > a:hover {
+    text-decoration: none;
     background: #262626;
     -moz-transition: .4s linear;
     -webkit-transition: .4s ease-out;
     transition: .4s linear;
 }
-.sPlus {
-    bottom: 10px;
-    right: 10px;
-}
-.sOne {
-    bottom: 60px;
-    right: -45px;
-    transition: all 0.5s;
-}
-.sTwo {
-    bottom: 110px;
-    right: -45px;
-    transition: all 0.6s;
-}
-.displaySticky {
-    right: 10px;
-}
-footer {
-    width: 100%;
-    padding: 10px 60px 10px 5px;
-    position: fixed;
-    z-index: 2;
-    bottom: 0;
-    left: 0;
-}
+
 .borde {
     border: 1px solid red;
 }
