--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -15,3 +15,27 @@
     font-family: 'Montserrat';
     padding: 25px 0px 20px 0px;
 }
+
+    .base {
+        width: 100%;
+        height: 500px;
+        overflow: auto;
+        position: relative;
+    }
+    .axisX {
+        position: sticky;
+        top: 0;
+        left: 0;
+        width: 33px;
+        height: 300px;
+        z-index: 1000;
+    }
+
+    .c1 {
+        position: absolute;
+        top: 0;
+        left: 0px;
+        width: 2000px;
+        height: 300px;
+        z-index: 0;
+    }
