--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -18,7 +18,7 @@
 
     .base {
         width: 100%;
-        height: 500px;
+        /*height: 500px;*/
         overflow: auto;
         position: relative;
     }
@@ -27,7 +27,7 @@
         top: 0;
         left: 0;
         width: 33px;
-        height: 300px;
+        height: 250px;
         z-index: 1000;
     }
 
@@ -36,6 +36,6 @@
         top: 0;
         left: 0px;
         width: 2000px;
-        height: 300px;
+        height: 250px;
         z-index: 0;
     }
