--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -15,27 +15,35 @@
     font-family: 'Montserrat';
     padding: 25px 0px 20px 0px;
 }
+.chartLineContainer {
+    height: 270px;
+    overflow: auto;
+    position: relative;
+}
+.copyChart {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 250px;
+    z-index: 0;
+}
+.whiteBackground {
+    position: absolute;
+    top: 0;
+    left: 32px;
+    width: 100%;
+    height: 250px;
+    z-index: 1;
+    background: white;
+}
 
-    .base {
-        width: 100%;
-        /*height: 500px;*/
-        overflow: auto;
-        position: relative;
-    }
-    .axisX {
-        position: sticky;
-        top: 0;
-        left: 0;
-        width: 33px;
-        height: 250px;
-        z-index: 1000;
-    }
-
-    .c1 {
-        position: absolute;
-        top: 0;
-        left: 0px;
-        width: 2000px;
-        height: 250px;
-        z-index: 0;
-    }
+.lineChart {
+    position: absolute;
+    top: 0;
+    left: 32px;
+    width: 2000px;
+    /*width: 100%;*/
+    height: 250px;
+    z-index: 1000;
+}
