--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -42,7 +42,7 @@
     position: absolute;
     top: 0;
     left: 32px;
-    width: 2000px;
+    width: 100%;
     /*width: 100%;*/
     height: 250px;
     z-index: 1000;
