--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -24,7 +24,7 @@
     position: sticky;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 200px;
     height: 250px;
     z-index: 0;
 }
@@ -32,7 +32,7 @@
     position: absolute;
     top: 0;
     left: 32px;
-    width: 100%;
+    width: 200px;
     height: 250px;
     z-index: 1;
     background: white;
