--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -15,35 +15,86 @@
     font-family: 'Montserrat';
     padding: 25px 0px 20px 0px;
 }
-.chartLineContainer {
-    height: 267px;
-    overflow: auto;
-    position: relative;
+.ct-series-a .ct-line {
+    stroke : #F5A214;
+    stroke-width: 1px;
 }
-.copyChart {
+.ct-series-b .ct-line {
+    stroke : #262626;
+    stroke-width: 1px;
+}
+.ct-series-a .ct-point {
+    stroke: #F5A214;
+    stroke-width: 12px;
+    stroke-linecap: square;
+}
+.ct-series-b .ct-point {
+    stroke: #262626;
+    stroke-width: 12px;
+    stroke-linecap: circle;
+}
+.ct-label.ct-vertical { 
+    font-size: 12px; color: #262626;
+}
+.ct-label.ct-horizontal { 
+    font-size: 12px; 
+    position: relative; 
+    transform: rotate(90deg); 
+    transform-origin: left top; 
+    color: #262626;
+}
+.chartLineContainer {
+    position: relative;
+    top: 0;
+    left: 0;
+    overflow: auto;
+    height: 300px;
+    z-index: 0;
+}
+.chartLine {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+}
+#chartLine {
+    width: 2000px;
+    height: 250px;
+}
+.chartLineSticky {
     position: sticky;
     top: 0;
     left: 0;
-    width: 200px;
-    height: 250px;
-    z-index: 0;
+    width: 100%;
+    z-index: 1;
 }
-.whiteBackground {
+#chartLineSticky {
+    width: 2000px;
+    height: 250px;
+}
+.chartLineBackground {
     position: absolute;
     top: 0;
-    left: 32px;
-    width: 200px;
+    left: 40px;
+    width: 1960px;
     height: 250px;
-    z-index: 1;
     background: white;
+    z-index: 2;
 }
 
-.lineChart {
-    position: absolute;
-    top: 0;
-    left: 33px;
-    width: 2000px;
-    /*width: 100%;*/
-    height: 250px;
-    z-index: 1000;
+
+@media (min-width: 1170px) {
+    #chartLine {
+        width: 100%;
+    }
+    #chartLineSticky {
+        width: 100%;
+    }
+    .chartLineBackground {
+        width: calc(100% - 40px);
+    }
+    body {
+        background: red;
+    }
 }
