--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -37,11 +37,14 @@
     font-size: 12px; color: #262626;
 }
 .ct-label.ct-horizontal { 
-    font-size: 12px; 
+    font-size: 10px; 
     position: relative; 
-    transform: rotate(90deg); 
+    transform: rotate(45deg); 
     transform-origin: left top; 
     color: #262626;
+}
+#example .ct-label {
+    font-size: 15px;
 }
 .chartLineContainer {
     position: relative;
@@ -93,8 +96,5 @@
     }
     .chartLineBackground {
         width: calc(100% - 40px);
-    }
-    body {
-        background: red;
     }
 }
