--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -60,7 +60,7 @@
 #example {
     border: 1px solid red;
     height: 200px;
-    width: 200px;
+    width: 100%;
     margin: 0 auto;
 }
 #example text {
