--- a/a/css/dashboard.css
+++ b/a/css/dashboard.css
@@ -57,8 +57,12 @@
     justify-content: center;
     align-items: center;
 }*/
+#example2 {
+    height: 250px;
+    width: 100%;
+}
 #example {
-    height: 200px;
+    height: 250px;
     width: 100%;
     margin: 0 auto;
 }
